<resources>
    <string name="app_name">自助同城</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video_test_name">AAAAAAAAAAAAAAAAAAAAAAA</string>
    <string name="hot_issue">"  "发布"  "</string>
    <string name="hot_issue_name">测试发布者</string>
    <string name="hot_watch">观看次数:</string>
    <string name="hot_watch_num">0.04</string>
    <string name="login">登录</string>
    <string name="folder_content">文件夹内容</string>
    <string name="userInfo">个人设置</string>
    <string name="title_conversion">ETH转DEEW</string>
    <string name="chat_title">聊天</string>
    <string name="me_title">我的</string>
    <string name="hot_load">服务正在开启中…</string>
    <string name="title_input">请输入搜索内容</string>
    <string name="user_name">用户名称</string>
    <string name="wallet_address">钱包地址:</string>
    <string name="account_wallet_address">钱包地址</string>
    <string name="account_wallet_scan">钱包二维码</string>
    <string name="wallet_address_content"> </string>
    <string name="log_off">退出登录</string>
    <string name="clear_cache">清除缓存</string>
    <string name="me_setting">个人设置</string>
    <string name="check_update">检查更新</string>
    +
    <string name="system_version">系统版本</string>
    <string name="version_number">V %1s</string>
    <string name="save_scan">保存二维码</string>
    <string name="share_scan">分享至</string>
    <string name="content_size">154kb</string>
    <string name="chat_content">聊天内容聊天内容</string>
    <string name="login_import_account">导入钱包</string>
    <string name="login_create_account">创建新账户></string>
    <string name="chat_time">13:54</string>
    <string name="overall_balance">总余额:%1$s</string>
    <string name="down_balance">下载余额:%1$s</string>
    <string name="downloading">正在下载(%1$d)</string>
    <string name="downcomplete">已完成(%1$d)</string>
    <string name="complete">完成</string>
    <string name="all_suspended">全部暂停</string>
    <string name="all_play">全部开始</string>
    <string name="recharge">充值</string>
    <string name="conversion">兑换</string>
    <string name="copy">复制</string>
    <string name="todo">TODO</string>
    <string name="userinfo_head_portrait">头像</string>
    <string name="userinfo_nickname">昵称</string>
    <string name="userinfo_nickname_hint">请输入您的昵称</string>
    <string name="userinfo_gender">性别</string>
    <string name="gender">请输入您的性别</string>
    <string name="birthday">请选择您的生日</string>
    <string name="userinfo_birthday">生日</string>
    <string name="userinfo_education_background">学历</string>
    <string name="userinfo_education_background_hint">请选择您的学历</string>
    <string name="userinfo_profession">职业</string>
    <string name="userinfo_profession_hint">请选择您的职业</string>
    <string name="userinfo_real_name">真实姓名</string>
    <string name="userinfo_real_name_hint">请输入您的真实姓名</string>
    <string name="userinfo_phone_number">电话号码</string>
    <string name="phone_number">请输入您的正确电话号码</string>
    <string name="topUpAmount">请输入充值金额</string>
    <string name="share">分享</string>
    <string name="edit_passwprd">登录账户</string>
    <string name="account_info">钱包信息</string>
    <string name="downvideo">下载</string>
    <string name="account_create">创建账户</string>
    <string name="account_create_login">创建新账户</string>
    <string name="create_account_success">创建成功</string>
    <string name="is_not_set">未设置</string>
    <string name="create_wallet">创建钱包</string>
    <string name="import_wallet">导入钱包</string>
    <string name="switch_wallet">切换钱包</string>
    <string name="determine">确定</string>
    <string name="cancel">取消</string>
    <string name="import_account_text">1、将其他设备上(PC\\移动端) 兑\n换钱包的密钥文件备份导出\n2、通过其他应用传输密钥文件到当前手机，并保存。\n3、通过文件管理器找到存储路径，选择导入。</string>
    <string name="acc_warm_prompt">温馨提示:\n钱包信息由个人保管，需妥善保存。\n一旦丢失密钥文件将无法找回，请务必及时备份！</string>
    <string name="please_enter_the_exchange_amount">请输入兑换金额</string>
    <string name="conversion_hint">ETH兑换成DEEW总余额，次日到账</string>
    <string name="pleaseEnterTheBitcoinAddress">请输入DEEW钱包地址</string>
    <string name="confirm_the_change">确认兑换</string>
    <string name="it_downing">%1$s</string>
    <string name="photoAlbum">相册</string>
    <string name="scanningQrCode">扫描二维码</string>
    <string name="the_current_exchange_rate">当前汇率 </string>
    <string name="exchange_txt_hint"> %1$s : %2$s</string>


</resources>
