<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/au_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/title_userinfo" />

        <LinearLayout
            style="@style/user_information_list_entry_style"
            android:layout_height="83dp">

            <TextView
                style="@style/user_information_interface"
                android:text="@string/userinfo_head_portrait" />

            <ImageView
                android:id="@+id/au_head_portrait"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="17dp"
                android:scaleType="centerCrop"
                app:srcCompat="@mipmap/ic_default_avatar" />
        </LinearLayout>

        <View style="@style/user_information_interface_dividing_line" />

        <LinearLayout
            android:id="@+id/au_username_ll"
            style="@style/user_information_list_entry_style"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TextView
                style="@style/user_information_interface"
                android:text="@string/userinfo_nickname" />

            <requestFocus />

            <EditText
                android:id="@+id/au_username"
                style="@style/user_information_interface_input_box"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/is_not_set"
                android:inputType="text"
                android:maxLength="10" />
        </LinearLayout>

        <View style="@style/user_information_interface_dividing_line" />

        <LinearLayout
            android:id="@+id/au_gender_ll"
            style="@style/user_information_list_entry_style"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TextView
                style="@style/user_information_interface"
                android:text="@string/userinfo_gender" />

            <TextView
                android:id="@+id/au_gender"
                android:textColor="#000"
                style="@style/user_information_interface_information_details"
                android:text="@string/is_not_set" />

            <ImageView
                style="@style/user_information_interface_click_on_the_icon"
                app:srcCompat="@mipmap/ic_me_unold" />
        </LinearLayout>

        <View style="@style/user_information_interface_dividing_line" />

        <LinearLayout
            android:id="@+id/au_phone_num_ll"
            style="@style/user_information_list_entry_style"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <TextView
                style="@style/user_information_interface"
                android:text="@string/userinfo_phone_number" />

            <requestFocus />

            <EditText
                android:id="@+id/au_phone_num"
                style="@style/user_information_interface_input_box"
                android:layout_weight="2"
                android:background="@null"
                android:digits="1234567890"
                android:hint="@string/is_not_set"
                android:inputType="phone"
                android:maxLength="11" />
        </LinearLayout>

        <View style="@style/user_information_interface_dividing_line" />
    </LinearLayout>
</ScrollView>