<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/items_fc_rcl"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="#222428"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/fc_iv_icon"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginStart="13dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fc_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/user_name"
        android:textColor="@color/colorWrite"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/fc_iv_icon"
        app:layout_constraintRight_toLeftOf="@id/fc_chatTime"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fc_chat_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="19dp"
        android:text="@string/chat_content"
        android:textColor="#ff7e8293"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/fc_iv_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fc_user_name" />

    <TextView
        android:id="@+id/fc_chatTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:text="@string/chat_time"
        android:textColor="#ff7e8293"
        android:textSize="11sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fc_unread_messages"
        android:layout_width="0dp"
        android:layout_height="23dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_num_background"
        android:gravity="center"
        android:text="99+"
        android:textColor="@color/colorWrite"
        android:textSize="11sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fc_chatTime" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#35363A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>